2008-01-31  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/misc/httpfile/httpfile.py
	(HTTPFileStreamer.updatePorterDetails): Refactor and clean up updatePorterDetails.
	Bump copyright and pep8ify.
	(HTTPFileStreamer._updatePath): comment and style changes

	* flumotion/ui/wizard.py (SectionWizard._set_step): Set the step earlier
	since the worker-changed signal is triggered before the end of this
	method, which will end up using the worker from the wrong step.

	* flumotion/component/consumers/httpstreamer/Makefile.am:
	* flumotion/component/consumers/httpstreamer/http_wizard.py:
	* flumotion/wizard/consumptionsteps.py:
	Move http_wizard over to the httpstreamer directory.
	Not yet pluggable, just separated.

2008-01-31  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/misc/porter/porter.py:
	* flumotion/test/realm.py:
	* flumotion/test/test_pbstream.py:
	* flumotion/worker/feedserver.py:
	Get rid of most __implements__ in favor of implements()

2008-01-31  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/productionsteps.py (ProductionStep): 
	* flumotion/wizard/conversionsteps.py (ConversionStep): 
	Fix production_step.get_audio/video_producer() to actually
	return None if there's no component selected.
	Update callsites.

	* flumotion/wizard/consumptionsteps.py (HTTPStep): 
	Clean up the internal blocking api

2008-01-30  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/registry.py (RegistryParser._parseWizard): 
	Verify that the wizard entries are somewhat correct.

	* doc/random/wizard-plugin: Add an initial draft of 
	describing how to create a wizard-plugin.

	* configure.ac: Pointless change to trigger a new autogen.
	* common/intltool-Makefile.in.in:
	(check): Add back check which does nothing

2008-01-30  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/producers/firewire/firewire_wizard.py:
	(__pychecker__): Do not check return values

	* flumotion/component/producers/audiotest/audiotest_wizard.py: